更改部分模板内容

--- a/v2/views/layout.html
+++ b/v2/views/layout.html
@@ -24,8 +24,8 @@
             <script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/js/html5.js" type="text/javascript"></script>
         <![endif]-->
 
-    <!-- <link rel="alternate" type="application/rss+xml" title="北京飘漂——.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术 » Feed" href="http://www.tystudio.net/feed/">
-    <link rel="alternate" type="application/rss+xml" title="北京飘漂——.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术 » 评论Feed" href="http://www.tystudio.net/comments/feed/"> -->
+    <!-- <link rel="alternate" type="application/rss+xml" title="北飘漂——.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术 » Feed" href="http://www.tystudio.net/feed/">
+    <link rel="alternate" type="application/rss+xml" title="北飘漂——.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术 » 评论Feed" href="http://www.tystudio.net/comments/feed/"> -->
    <!-- <link rel="stylesheet" id="geshi-csharp-css" href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/plugins/wp-synhighlight/csharp.css" type="text/css" media="all">-->
     <link rel="stylesheet" id="bluthcodes-fontello-css" href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/plugins/bluthcodes/assets/fontello/fontello.css?ver=3.6.1" type="text/css" media="all">
     <link rel="stylesheet" id="bluthcodes-bootstrap-style-css" href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/plugins/bluthcodes/bootstrap/bootstrap.min.css?ver=3.6.1" type="text/css" media="all">
@@ -79,8 +79,8 @@
         }
     </style>
     <!-- All in One SEO Pack 2.0.3.1 by Michael Torbert of Semper Fi Web Design[237,244] -->
-    <meta name="description" content="北京飘漂是一个乐于分享| .Net | C/C++ | golang | TypeScript | NoSql | linux |等技术的IT博客">
-    <meta name="keywords" content="北京飘漂—.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术">
+    <meta name="description" content="北飘漂是一个乐于分享| .Net | C/C++ | golang | TypeScript | NoSql | linux |等技术的IT博客">
+    <meta name="keywords" content="北飘漂—.Net,C#,C/C++,Golang,TypeScript,NoSql,Linux等开发技术">
     <link rel="next" href="{{$config.SiteURL}}}/page/2/">
     <link rel="canonical" href="{{$config.SiteURL}}">
     <script type="text/javascript">
