--- a/v2/views/layout.html
+++ b/v2/views/layout.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="baidu-site-verification" content="3ac999114074ae56438b4b5bca12decf"/>
     <title>
             {{if $currentcat}}
                 {{$title:=$currentcat.GetCurrentTitle}}
