去除后台部分冗余js

--- a/v2/static/bliss/root/css/charisma-app.css
+++ b/v2/static/bliss/root/css/charisma-app.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Shojumaru);
+@import url(https://fonts.googleapis.com/css?family=Karla|Ubuntu);
 
 select{
 background-color:#fff;
