--- a/v2/views/root/layout.html
+++ b/v2/views/root/layout.html
@@ -18,19 +18,19 @@
 	<link href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/bootstrap-responsive.css" rel="stylesheet">
 	<link href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/charisma-app.css" rel="stylesheet">
 	<link href="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery-ui-1.8.21.custom.css" rel="stylesheet">
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/fullcalendar.css' rel='stylesheet'>
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/fullcalendar.print.css' rel='stylesheet'  media='print'>
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/fullcalendar.css' rel='stylesheet'>-->
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/fullcalendar.print.css' rel='stylesheet'  media='print'>-->
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/chosen.css' rel='stylesheet'>
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/uniform.default.css' rel='stylesheet'>
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/colorbox.css' rel='stylesheet'>
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery.cleditor.css' rel='stylesheet'>
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/colorbox.css' rel='stylesheet'>-->
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery.cleditor.css' rel='stylesheet'>-->
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery.noty.css' rel='stylesheet'>
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/noty_theme_default.css' rel='stylesheet'>
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/elfinder.min.css' rel='stylesheet'>
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/elfinder.theme.css' rel='stylesheet'>
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery.iphone.toggle.css' rel='stylesheet'>
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/jquery.iphone.toggle.css' rel='stylesheet'>-->
 	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/opa-icons.css' rel='stylesheet'>
-	<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/uploadify.css' rel='stylesheet'>
+	<!--<link href='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/css/uploadify.css' rel='stylesheet'>-->
 
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
@@ -83,7 +83,7 @@
 	<!-- library for cookie management -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.cookie.js"></script>
 	<!-- calander plugin -->
-	<script src='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/fullcalendar.min.js'></script>
+	<!--<script src='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/fullcalendar.min.js'></script>-->
 	<!-- data table plugin -->
 	<script src='{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.dataTables.min.js'></script>
 
@@ -100,9 +100,9 @@
 	<!-- checkbox, radio, and file input styler -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.uniform.min.js"></script>
 	<!-- plugin for gallery image view -->
-	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.colorbox.min.js"></script>
+	<!--<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.colorbox.min.js"></script>-->
 	<!-- rich text editor library -->
-	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.cleditor.min.js"></script>
+	<!--<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.cleditor.min.js"></script>-->
 	<!-- notification plugin -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.noty.js"></script>
 	<!-- file manager library -->
@@ -110,11 +110,11 @@
 	<!-- star rating plugin -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.raty.min.js"></script>
 	<!-- for iOS style toggle switch -->
-	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.iphone.toggle.js"></script>
+	<!--<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.iphone.toggle.js"></script>-->
 	<!-- autogrowing textarea plugin -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.autogrow-textarea.js"></script>
 	<!-- multiple file upload plugin -->
-	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.uploadify-3.1.min.js"></script>
+	<!--<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.uploadify-3.1.min.js"></script>-->
 	<!-- history.js for cross-browser state change on ajax -->
 	<script src="{{$config.StaticURL}}/static/{{$config.ThemeName}}/root/js/jquery.history.js"></script>
 	<!-- application script for Charisma demo -->
